Project datamase {}

Table users {
  id integer [pk, increment]
  name text [unique]
  password_hash text
  created_at datetime [default: `CURRENT_TIMESTAMP`]
}

Table chats {
  id integer [pk, increment]
  user_id integer [ref: > users.id]
  title text
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]

  indexes {
    (user_id) [name: 'idx_chats_user_id']
  }
}

Table messages {
  id integer [pk, increment]
  chat_id integer [ref: > chats.id]
  role text
  content text
  created_at datetime [default: `CURRENT_TIMESTAMP`]

  indexes {
    (chat_id) [name: 'idx_messages_chat_id']
  }
}

// Foreign keys are defined inline above.


